Fix z-index error

--- a/src/styles/board.css
+++ b/src/styles/board.css
@@ -19,9 +19,17 @@
   object-fit: contain;
 }
 
+.square {
+  position: relative;
+}
 .shot {
-  z-index: 1;
   position: absolute;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
 .disabled {
